demo-apps/easytrade/kubernetes-manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easytrade
  labels:
    dt.owner: team-workshop  
  annotations:
    keptn.sh/lifecycle-toolkit: enabled
