demo-apps/easytrade/kubernetes-manifests/aggregatorservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregatorservice
spec:
  selector:
    matchLabels:
      app: aggregatorservice
  template:
    metadata:
      labels:
        app: aggregatorservice
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop        
    spec:
      containers:
        - name: aggregatorservice-1
          image: gcr.io/dynatrace-demoability/easytrade/aggregatorservice:44e1877
          resources: &default_res
            requests:
              cpu: 50m
              memory: 100Mi
        - name: aggregatorservice-2
          image: gcr.io/dynatrace-demoability/easytrade/aggregatorservice:44e1877
          resources: *default_res
        - name: aggregatorservice-3
          image: gcr.io/dynatrace-demoability/easytrade/aggregatorservice:44e1877
          resources: *default_res
        - name: aggregatorservice-4
          image: gcr.io/dynatrace-demoability/easytrade/aggregatorservice:44e1877
          resources: *default_res
        - name: aggregatorservice-5
          image: gcr.io/dynatrace-demoability/easytrade/aggregatorservice:44e1877
          resources: *default_res
