demo-apps/easytrade/kubernetes-manifests/calculationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculationservice
spec:
  selector:
    matchLabels:
      app: calculationservice      
  template:
    metadata:
      labels:
        app: calculationservice
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: calculationservice
          image: gcr.io/dynatrace-demoability/easytrade/calculationservice:44e1877
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
