demo-apps/easytrade/kubernetes-manifests/contentcreator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contentcreator
  labels:
    dt.owner: team-workshop  
spec:
  selector:
    matchLabels:
      app: contentcreator
  template:
    metadata:
      labels:
        app: contentcreator
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: contentcreator
          image: gcr.io/dynatrace-demoability/easytrade/contentcreator:44e1877
          resources:
            requests:
              cpu: 150m
              memory: 200Mi
