demo-apps/easytrade/kubernetes-manifests/headlessloadgen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: headlessloadgen
  name: headlessloadgen
spec:
  selector:
    matchLabels:
      app: headlessloadgen
  template:
    metadata:
      labels:
        app: headlessloadgen
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: headlessloadgen
          image: gcr.io/dynatrace-demoability/headlessloadgen:0deedcc
          imagePullPolicy: Always
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "900Mi"
              cpu: "700m"
