demo-apps/easytrade/kubernetes-manifests/brokerservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brokerservice
  labels:
    dt.owner: team-workshop  
spec:
  selector:
    matchLabels:
      app: brokerservice
  template:
    metadata:
      labels:
        app: brokerservice
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: brokerservice
          image: gcr.io/dynatrace-demoability/easytrade/brokerservice:44e1877
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: brokerservice
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: brokerservice
  ports:
    - name: http
      port: 80
      targetPort: 80
