demo-apps/easytrade/kubernetes-manifests/engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  labels:
    dt.owner: team-workshop  
spec:
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: engine
          image: gcr.io/dynatrace-demoability/easytrade/engine:44e1877
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 150m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: engine
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: engine
  ports:
    - name: http
      port: 8080
      targetPort: 8080
