demo-apps/easytrade/kubernetes-manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: frontend
          image: gcr.io/dynatrace-demoability/easytrade/frontend:44e1877
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 300m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
