demo-apps/easytrade/kubernetes-manifests/frontendreverseproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendreverseproxy
  labels:
    dt.owner: team-workshop  
spec:
  selector:
    matchLabels:
      app: frontendreverseproxy
  template:
    metadata:
      labels:
        app: frontendreverseproxy
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: frontendreverseproxy
          image: gcr.io/dynatrace-demoability/easytrade/frontendreverseproxy:44e1877
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontendreverseproxy
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: frontendreverseproxy
  ports:
    - name: http
      port: 80
      targetPort: 80
