demo-apps/easytrade/kubernetes-manifests/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
spec:
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: manager
          image: gcr.io/dynatrace-demoability/easytrade/manager:44e1877
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 150m
              memory: 350Mi
---
apiVersion: v1
kind: Service
metadata:
  name: manager
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: manager
  ports:
    - name: http
      port: 80
      targetPort: 80
