demo-apps/easytrade/kubernetes-manifests/offerservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offerservice
  labels:
    dt.owner: team-workshop  
spec:
  selector:
    matchLabels:
      app: offerservice
  template:
    metadata:
      labels:
        app: offerservice
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: offerservice
          image: gcr.io/dynatrace-demoability/easytrade/offerservice:44e1877
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 300m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: offerservice
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: offerservice
  ports:
    - name: http
      port: 8080
      targetPort: 8080
