demo-apps/easytrade/kubernetes-manifests/pricingservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricingservice
  labels:
    dt.owner: team-workshop  
spec:
  selector:
    matchLabels:
      app: pricingservice
  template:
    metadata:
      labels:
        app: pricingservice
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: pricingservice
          image: gcr.io/dynatrace-demoability/easytrade/pricingservice:44e1877
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pricingservice
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: pricingservice
  ports:
    - name: http
      port: 80
      targetPort: 80
