demo-apps/easytrade/kubernetes-manifests/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        app.kubernetes.io/version: 44e1877
        app.kubernetes.io/part-of: easytrade
        dt.owner: team-workshop
    spec:
      containers:
        - name: rabbitmq
          image: gcr.io/dynatrace-demoability/easytrade/rabbitmq:44e1877
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    dt.owner: team-workshop
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-listener
      port: 5672
      targetPort: 5672
    - name: rabbitmq-ui
      port: 15672
      targetPort: 15672
