demo-apps/easytrade/kubernetes-manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendreverseproxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: easytrade.agrabner-hotday.keptn.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendreverseproxy
                port:
                  number: 80
